syntax = "proto3";

package types;
option go_package = "github.com/tendermint/tendermint/types";

// BlockIdFlag indicates which BlcokID the signature is for
enum BlockIDFlag {
  BLOCK_ID_FLAG_UNSPECIFIED = 0;
  BLOCK_ID_FLAG_ABSENT = 1;
  BLOCK_ID_FLAG_COMMIT = 2;
  BLOCK_ID_FLAG_NIL = 3;
}

// SignedMsgType is a type of signed message in the consensus.
enum SignedMsgType {
  SIGNED_MSG_TYPE_UNSPECIFIED = 0;
  SIGNED_MSG_TYPE_PREVOTE_TYPE = 1;
  SIGNED_MSG_TYPE_PRECOMMIT_TYPE = 2;
  SIGNED_MSG_TYPE_PRPOSAL_TYPE = 3;
}